--- a/si.html
+++ b/si.html
@@ -76,7 +76,7 @@
 
   <script>
     function irAInicio() {
-      window.location.href = 'DC_files/index.html';
+      window.location.href = 'DC_files/clock.mp3';
     }
     
     const playPauseBtn2 = document.getElementById('playPauseBtn');
