--- a/si.html
+++ b/si.html
@@ -76,7 +76,7 @@
 
   <script>
     function irAInicio() {
-      window.location.href = 'DC_files/clock.mp3';
+      window.location.href = 'https://stickerly.pstatic.net/sticker_pack/AjO7NWeXkHrzcuCMheNopQ/DNYYAQ/18/-951852508.png';
     }
     
     const playPauseBtn2 = document.getElementById('playPauseBtn');
